--- a/appTemplate/GridViewController.xib
+++ b/appTemplate/GridViewController.xib
@@ -118,13 +118,14 @@
                     </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="ULE-hL-XXh">
-                    <rect key="frame" x="0.0" y="36" width="240" height="128"/>
+                    <rect key="frame" x="42" y="30" width="240" height="128"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dsQ-bX-szE">
-                    <rect key="frame" x="268" y="65" width="32" height="32"/>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dsQ-bX-szE">
+                    <rect key="frame" x="276" y="126" width="22" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" backgroundImage="Gear-icon.png">
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -146,7 +147,6 @@
         <image name="7.png" width="138" height="173"/>
         <image name="8.png" width="138" height="173"/>
         <image name="9.png" width="138" height="173"/>
-        <image name="Gear-icon.png" width="96" height="96"/>
         <image name="bg.png" width="444" height="708"/>
         <image name="logo.png" width="275" height="174"/>
     </resources>
