--- a/appTemplate/SettingViewController.xib
+++ b/appTemplate/SettingViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingViewController">
             <connections>
+                <outlet property="aboutText" destination="9bw-fG-9V4" id="lp6-3f-guh"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
