--- a/appTemplate/DetailedViewController.xib
+++ b/appTemplate/DetailedViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailedViewController">
             <connections>
+                <outlet property="descScrollImage" destination="whl-NL-fbZ" id="DlM-3D-xNi"/>
                 <outlet property="descText" destination="239" id="ngt-2e-kku"/>
                 <outlet property="dismissPickerView" destination="Px0-hu-mIw" id="J7C-h9-5qe"/>
                 <outlet property="freeImg" destination="Jpx-4U-tYl" id="V6F-8N-APE"/>
@@ -14,6 +15,7 @@
                 <outlet property="periodText" destination="k4A-xg-r7g" id="h3K-KS-dSI"/>
                 <outlet property="picker" destination="aLX-97-e7C" id="ev7-gA-Zw6"/>
                 <outlet property="pickerView" destination="RB6-hS-aR2" id="BeQ-pN-PHX"/>
+                <outlet property="priceScrollImage" destination="yvB-h9-ka0" id="aKj-z6-Gfz"/>
                 <outlet property="saleImg" destination="4Uv-eZ-DCJ" id="7T7-ah-Bek"/>
                 <outlet property="saleText" destination="318" id="bGA-Pp-f0B"/>
                 <outlet property="showTitle" destination="k9d-JS-vrb" id="kZP-ut-jC7"/>
@@ -34,13 +36,17 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="descTx" id="239">
-                            <rect key="frame" x="20" y="120" width="285" height="208"/>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" indicatorStyle="black" editable="NO" text="descTx" id="239">
+                            <rect key="frame" x="20" y="120" width="270" height="207"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
+                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scroll.png" id="whl-NL-fbZ">
+                            <rect key="frame" x="281" y="298" width="24" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="k9d-JS-vrb">
                             <rect key="frame" x="20" y="64" width="285" height="48"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES"/>
@@ -59,6 +65,10 @@
                             <rect key="frame" x="20" y="381" width="285" height="173"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
+                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scroll.png" id="yvB-h9-ka0">
+                                    <rect key="frame" x="223" y="96" width="24" height="24"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </imageView>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ptx-Bn-3mE">
                                     <rect key="frame" x="0.0" y="14" width="233" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES"/>
@@ -91,7 +101,7 @@
                                     </connections>
                                 </button>
                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" id="318">
-                                    <rect key="frame" x="0.0" y="50" width="247" height="65"/>
+                                    <rect key="frame" x="0.0" y="50" width="233" height="65"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES"/>
                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -109,7 +119,7 @@
                             </subviews>
                         </view>
                         <view contentMode="scaleToFill" id="RB6-hS-aR2">
-                            <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                            <rect key="frame" x="-5" y="20" width="320" height="548"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <view contentMode="scaleToFill" id="QhK-ao-yJg">
@@ -179,6 +189,7 @@
         <image name="free.png" width="90" height="47"/>
         <image name="map.png" width="42" height="42"/>
         <image name="ok.png" width="28" height="28"/>
+        <image name="scroll.png" width="64" height="64"/>
         <image name="shopping.png" width="42" height="42"/>
     </resources>
 </document>
